test/errors/constants_error/zs/invalid_constant_name_error.zs
package invalid_constant_name_error;

// align is a reserved keyword!
const int32 align = 13;
